k8s/Service.yaml
apiVersion: v1.5
kind: Service
metadata:
  name: jhu-covid19bot-web
spec:
  selector:
    app: jhu-covid19bot-web
  ports:
  - name: http
    targetPort: 80
    port: 80
