k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jhu-covid19bot-web
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jhu-covid19bot-web
          servicePort: http
